# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  GameEngine.vcxproj  README.md  in0.txt
DLLs/: desktop.ini
Debug/: GameEngine.exp  GameEngine.ilk  GameEngine.lib
Debug/GameEngine.tlog/: CL.command.1.tlog  CL.write.1.tlog  GameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog
Debug/Shader/: vert.glsl
GameEngine/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.h  ClassCastMismatchExeption.h  ClassDiagram.cd  ClassDiagram1.cd  ClassDiagram2.cd  CrashHandler.cpp  CrashHandler.h  Cube.h  CubeMap.cpp  CubeMap.h  DynamicEntity.h  Entity.h  ErrorCode.cpp  ErrorCode.h  ExampleException.cpp  ExceptionInclude.cpp  ExceptionTemplate.h  FileSystemManager.cpp  FileSystemManager.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FontManagerException.h  FrameBuffer.cpp  FrameBuffer.h  GameEngine.cpp  GameEngine.h  GameEngine.licenseheader  GameEngine.sln  (+70 more)
GameEngine/Debug/: assetmanager.nativecodeanalysis.xml  source.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc141.idb
GameEngine/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters  Source.cpp  Test1.cpp  Test1.h
GameEngine/Model/: Barrel.mtl  Buckler.mtl  Crossbow.mtl  rocket.mtl  rocket2.mtl  sphere.mtl  spherepbr.mtl  textured.mtl
GameEngine/Shader/: bb_frag.glsl  color_frag.glsl  frag.glsl  light_vert.glsl  sun_frag.glsl  transform_frag.glsl  transform_vert.glsl  vert.glsl
HelperScripts/: Edit_MTL_Filepaths.cpp
Model/: Gladius.mtl  Javelin.mtl  rocket.mtl  spherepbr.mtl
Setup Files/: StartApp.cpp
Shader/: chunk_frag.glsl  color_vert.glsl  cube_vert.glsl  font_frag.glsl
include/KMThreadPool/: KMLock.h  KMQueue.h  KMTask.h  KMThreadPool_Win32.cpp  KMThreadPool_Win32.h  KMThread_Win32.cpp  KMThread_Win32.h  KMUtility.h  README.txt  libKMThreadPool.vcproj
include/lua/: lua5.3.0.exp  luac.exp
lib/bullet/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletExampleBrowserLib_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletSoftBody_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  BussIK_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  HACD_Debug.lib  LinearMath_Debug.lib  clsocket_Debug.lib  gtest_Debug.lib
lib/bullet_libs/: App_HelloBulletRobotics_gmake_x64_release  App_HelloWorld_gmake_x64_release  App_PhysicsServerSharedMemoryBridgeTCP_gmake_x64_release  App_PhysicsServerSharedMemoryBridgeUDP_gmake_x64_release  App_PhysicsServerTCP_gmake_x64_release  App_PhysicsServerUDP_gmake_x64_release  App_PhysicsServer_SharedMemory_GUI_gmake_x64_release  App_PhysicsServer_SharedMemory_gmake_x64_release  App_SimpleOpenGL3_gmake_x64_release  App_obj2sdf_gmake_x64_release  Test_BulletCollision_gmake_x64_release  Test_BulletDynamics_gmake_x64_release  Test_Gwen_OpenGL_gmake_x64_release  Test_InverseDynamicsJacobian_gmake_x64_release  Test_InverseDynamicsKinematics_gmake_x64_release  Test_InverseForwardDynamics_gmake_x64_release  Test_LinearMath_gmake_x64_release  Test_OpenCL_Bullet3_gmake_x64_release  Test_PhysicsClientTCP_gmake_x64_release  Test_PhysicsClientUDP_gmake_x64_release  Test_PhysicsServerDirect_gmake_x64_release  Test_PhysicsServerLoopBack_gmake_x64_release  Test_SharedMemoryPhysicsClient_gmake_x64_release  Test_clsocket_EchoServer_gmake_x64_release  Test_clsocket_QueryDayTime_gmake_x64_release  Test_enet_chat_client_gmake_x64_release  Test_enet_chat_server_gmake_x64_release  Test_enet_nat_punchthrough_client_gmake_x64_release  Test_enet_nat_punchthrough_server_gmake_x64_release  test_vhacd_gmake_x64_release
lib/lua/: desktop.ini  lua5.3.0-static.lib  lua5.3.0.lib  luac.lib
old/: GameEngine.cpp  GameEngine.h
resources/HelperScripts/: Edit_MTL_Filepaths.cpp  test.mtl  (+1 more)
src/: AssetManager.cpp  Axis.h  BoundingBox.cpp  Camera.cpp  Camera.h  Chunk.cpp  ClassDiagram.cd  ClassDiagram2.cd  CrashHandler.cpp  CrashHandler.h  Cube.cpp  CubeMap.h  ErrorCode.cpp  ErrorCode.h  ExceptionTemplate.h  FileSystemManager.h  FontManager.cpp  FrameBuffer.cpp  FrameBuffer.h  GameEngine.cpp  GameEngine.h  GameEngine.vcxproj  GameEngine.vcxproj.filters  InputEvent.h  InputManager.cpp  Light.h  Logger.cpp  Logger_OLD.h  LuaScript.h  Material.h  MemoryManager.h  Model.cpp  ModelManager.h  Object.cpp  Object.h  OpenGlRenderer.cpp  OpenGlRenderer.h  PerlinGenerator.cpp  PhysicalInstance.cpp  PhysicsEngine.cpp  (+23 more)
(+95 files in other folders)
